--- a/licence3.image/launchImageJ/pom.xml
+++ b/licence3.image/launchImageJ/pom.xml
@@ -146,5 +146,10 @@
 			<artifactId>morphology</artifactId>
 			<version>0.0.1</version>
 		</dependency>
+		<dependency>
+			<groupId>fr.parisdescartes.images</groupId>
+			<artifactId>codebar</artifactId>
+			<version>0.0.1</version>
+		</dependency>
 	</dependencies>
 </project>
