--- a/licence3.image/pom.xml
+++ b/licence3.image/pom.xml
@@ -1,12 +1,12 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
 		<version>24.0.0</version>
-		<relativePath />
+		<relativePath/>
 	</parent>
 
 	<groupId>fr.parisdescartes</groupId>
@@ -90,7 +90,8 @@
 		<module>convolution</module>
 		<module>differencegaussian</module>
 		<module>morphology</module>
-	</modules>
+    	<module>codebar</module>
+  	</modules>
 
 	<repositories>
 		<repository>
